# online-shop

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  last_websocket_call_time.pickle  manage.py  pyproject.toml  requirements.txt
fixtures/: fixture.json
multishop-1.0.0/: LICENSE.txt
myvenv/: pip-selfcheck.json  pyvenv.cfg
myvenv/Scripts/: Activate.ps1  activate  activate.bat  django-admin.py
online_shop/: asgi.py  settings.py  urls.py
shop/: admin.py  api.py  consumers.py  context_processors.py  enums.py  forms.py  models.py  routing.py  tst.py  urls.py  utils.py  views.py
shop/migrations/: 0001_initial.py  0002_order_customer_order_status_product_added_at_and_more.py  0003_alter_product_pic_orderitem.py  0004_alter_order_status_alter_product_added_at_and_more.py  0004_int_alter_product_added_at_alter_product_slug.py  0005_alter_order_date_created_alter_product_price_and_more.py  0005_int_amount.py  0006_alter_order_customer.py  0007_product_description.py  0008_alter_product_description.py  0009_order_date_added_shippingaddress.py  0010_shippingaddress_country_shippingaddress_zip_code.py  0011_card.py  0012_alter_card_customer.py  0013_orderitem_date_added.py  0014_alter_orderitem_date_added.py  0015_websocketinfo.py  0016_alter_websocketinfo_last_usd_datetime_and_more.py  0017_alter_product_slug.py  0018_alter_product_slug.py  (+4 more)
templates/: cart.html  check.html  checkout.html  contact.html  detail.html  index.html  login_view.html  main.html  registration.html  shop.html
tests/: test_models.py  test_urls.py  test_views.py
(+15 files in other folders)
