[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.3"
djangorestframework = "3.14.0"
pillow = "9.3.0"
pytz = "2022.6"
sqlparse = "0.4.3"
asgiref = "3.5.2"
channels = "3.0.4"
requests = "2.28.1"
django-dotenv = "1.4.2"
psycopg2-binary = "2.9.5"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
autoflake = "^2.3.1"
pylint-django = "^2.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = [
    'missing-docstring',
    'wildcard-import',
    'imported-auth-user',
    'unused-wildcard-import',
]